<resources>
    <string name="task_card_mark_complete">Mark task as complete</string>
    <string name="task_card_mark_incomplete">Mark task as incomplete</string>
    <string name="task_card_flagged">Flagged</string>
    <string name="task_card_urgent">Urgent</string>
    <string name="task_card_expand">Expand</string>
    <string name="task_card_collapse">Collapse</string>
    <string name="priority_low">Low priority</string>
    <string name="priority_medium">Medium priority</string>
    <string name="priority_high">High priority</string>
    <string name="tag_selected_description">Selected</string>

    <string name="color_name_red">Red</string>
    <string name="color_name_orange">Orange</string>
    <string name="color_name_yellow">Yellow</string>
    <string name="color_name_green">Green</string>
    <string name="color_name_blue">Blue</string>
    <string name="color_name_purple">Purple</string>
    <string name="color_name_pink">Pink</string>
    <string name="color_name_gray">Gray</string>
    <string name="color_name_format">Color %s</string>
</resources>
